# cwrenity

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/resources/shaders/: purple.frag  purple.vert  rainbow.frag  rainbow.vert  solid_colour.frag  solid_colour.vert  texture.frag  texture.vert
example/src/: app.c  app.h  main.c
include/: cwrengl.h  cwrenity.h
src/: application.c  application.h  asset_wrangler.c  cwrengl.c  debugger.c  native_layer.h  utility.c  win32_layer.c  win32_surface.c  win32_surface.h
terrarium/src/: CMakeLists.txt
